@@ -1,13 +1,11 @@
 package com.socialmedia.social_media_frontend.controller;
 
 import com.socialmedia.social_media_frontend.model.Group;
+import com.socialmedia.social_media_frontend.model.User;
 import com.socialmedia.social_media_frontend.service.GroupClientService;
-
 import org.springframework.stereotype.Controller;
 import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.*;
-
-import java.util.List;
 
 @Controller
 @RequestMapping("/member/groups")
@@ -32,18 +30,36 @@ public class GroupController {
 
     @GetMapping("/by-id")
     public String getGroupById(@RequestParam int id, Model model) {
-        model.addAttribute("data", List.of(service.getGroupById(id)));
+        Group group = service.getGroupById(id);
+        model.addAttribute("data", java.util.Collections.singletonList(group));
+        return "groups/result";
+    }
+
+    @GetMapping("/by-name")
+    public String getGroupByName(@RequestParam String groupName, Model model) {
+        model.addAttribute("data", service.getGroupByName(groupName));
         return "groups/result";
     }
 
     @PostMapping("/create")
-    public String createGroup(@ModelAttribute Group group) {
+    public String createGroup(@RequestParam String groupName, @RequestParam int adminID) {
+        Group group = new Group();
+        group.setGroupName(groupName);
+        User admin = new User();
+        admin.setUserID(adminID);
+        group.setAdmin(admin);
         service.createGroup(group);
         return "redirect:/member/groups";
     }
 
     @PostMapping("/update")
-    public String updateGroup(@ModelAttribute Group group) {
+    public String updateGroup(@RequestParam int groupID, @RequestParam String groupName, @RequestParam int adminID) {
+        Group group = new Group();
+        group.setGroupID(groupID);
+        group.setGroupName(groupName);
+        User admin = new User();
+        admin.setUserID(adminID);
+        group.setAdmin(admin);
         service.updateGroup(group);
         return "redirect:/member/groups";
     }
@@ -51,12 +67,6 @@ public class GroupController {
     @GetMapping("/by-admin")
     public String getGroupsByAdmin(@RequestParam int adminId, Model model) {
         model.addAttribute("data", service.getGroupsByAdmin(adminId));
-        return "groups/result";
-    }
-
-    @GetMapping("/by-name")
-    public String getGroupByName(@RequestParam String name, Model model) {
-        model.addAttribute("data", service.getGroupByName(name));
         return "groups/result";
     }
 }
